Fixed the issue with the overlapping Div transparency in the css of both pages. Working on the menu of the menu.css

--- a/css/index.css
+++ b/css/index.css
@@ -95,19 +95,17 @@ header {
     color: rgb(225, 239, 230);
     text-align: center;
 }
-header div {
+h1 {
     background-color: rgb(0, 4, 17, .8);
 }
 h1 a {
     font-size: 85%;
-    
 }
 .links {
     display: flex;
     justify-content: space-between;
     padding-left: 15%;
     padding-right: 15%;
-    
 }
 .socialmedia {
     font-size: 3.3rem;
@@ -117,6 +115,9 @@ h1 a {
     margin-left: auto;
     margin-right: auto;
     padding: 1%;
+}
+header nav {
+    background-color: rgb(0, 4, 17, .8);
 }
 /* spacers */
 .spacer {
